10. 명령형 습관 지우기 - queryToObject

--- a/10-break-imperative-thinking/01-no-reduce-all-around.html
+++ b/10-break-imperative-thinking/01-no-reduce-all-around.html
@@ -119,5 +119,19 @@
     join('&'));
   console.log(query4(obj1));
 </script>
+
+
+4. queryToObject
+<script>
+  const split = _.curry((sep, str) => str.split(sep));
+
+  const queryToObject = _.pipe(
+    split('&'),
+    L.map(split('=')),
+    L.map(([k, v]) => ({ [k]: v })),
+    _.reduce(Object.assign)
+  );
+  console.log(queryToObject('a=1&c=CC&d=DD'));
+</script>
 </body>
 </html>
