12. 객체를 이터러블 프로그래밍으로 다루기 - keys

--- a/12-object-as-iterable/01-object-as-iterable.html
+++ b/12-object-as-iterable/01-object-as-iterable.html
@@ -64,5 +64,17 @@
 
   console.clear();
 </script>
+
+
+3. keys
+<script>
+  L.keys = function *(obj) {
+    for (const k in obj) yield k;
+  };
+
+  _.go(obj1,
+    L.keys,
+    _.each(console.log));
+</script>
 </body>
 </html>
