--- a/12-object-as-iterable/01-object-as-iterable.html
+++ b/12-object-as-iterable/01-object-as-iterable.html
@@ -204,5 +204,18 @@
 
   console.clear();
 </script>
+
+
+9. indexBy 된 값을 filter 하기
+<script>
+  const users3 = _.go(
+    users2,
+    L.entries,
+    L.filter(([_, {age}]) => age < 30),
+    L.take(2),
+    object);
+
+  console.log(users3[19]);
+</script>
 </body>
 </html>
