13. 사용자 정의 객체를 이터러블 프로그래밍으로 다루기 - Model, Collection (2)
제너레이터 문법 축약

--- a/13-user-defined-object-as-iterable/02-model-and-collection-class.html
+++ b/13-user-defined-object-as-iterable/02-model-and-collection-class.html
@@ -54,10 +54,12 @@ class Collection {
     return this;
   }
   *[Symbol.iterator]() {
-    for (const model of this._models) {
-      yield model;
-    }
+    yield *this._models;
   }
+  // 동일한 표현
+  // [Symbol.iterator]() {
+  //   return this._models[Symbol.iterator]();
+  // }
 }
   
 const coll = new Collection();
