13. 사용자 정의 객체를 이터러블 프로그래밍으로 다루기 - Model, Collection (3)
coll의 name을 소문자로 변경

--- a/13-user-defined-object-as-iterable/02-model-and-collection-class.html
+++ b/13-user-defined-object-as-iterable/02-model-and-collection-class.html
@@ -75,6 +75,11 @@ _.go(
   // L.map(i => coll.at(i)),
   L.map(m => m.get('name')),
   _.each(console.log));
+
+_.go(
+  coll,
+  _.each(m => m.set('name', m.get('name').toLowerCase())));
+console.log(_.map(m => m.get('name'), coll));
 </script>
 </body>
 </html>
