13. 사용자 정의 객체를 이터러블 프로그래밍으로 다루기 - Product, Products (2)
totalPrice 함수형 코드로 변환

--- a/13-user-defined-object-as-iterable/03-product-and-products-class.html
+++ b/13-user-defined-object-as-iterable/03-product-and-products-class.html
@@ -44,11 +44,9 @@ class Product extends Model {}
 
 class Products extends Collection {
   totalPrice() {
-    let total = 0;
-    this._models.forEach(product => {
-      total += product.get('price');
-    });
-    return total;
+    return _.go(this,
+      L.map(p => p.get('price')),
+      _.reduce((a, b) => a + b));
   }
 }
 
