13. 사용자 정의 객체를 이터러블 프로그래밍으로 다루기 - Product, Products (3)
길지 않으므로 파이프라인 굳이 사용할 필요가 없음

--- a/13-user-defined-object-as-iterable/03-product-and-products-class.html
+++ b/13-user-defined-object-as-iterable/03-product-and-products-class.html
@@ -44,9 +44,8 @@ class Product extends Model {}
 
 class Products extends Collection {
   totalPrice() {
-    return _.go(this,
-      L.map(p => p.get('price')),
-      _.reduce((a, b) => a + b));
+    return _.reduce((a, b) => a + b,
+      L.map(p => p.get('price'), this));
   }
 }
 
