13. 사용자 정의 객체를 이터러블 프로그래밍으로 다루기 - Product, Products (4)
addAll 함수 정의하여 totalPrice 축약

--- a/13-user-defined-object-as-iterable/03-product-and-products-class.html
+++ b/13-user-defined-object-as-iterable/03-product-and-products-class.html
@@ -42,10 +42,11 @@ class Collection {
 
 class Product extends Model {}
 
+const add = (a, b) => a + b;
+const addAll = _.reduce(add);
 class Products extends Collection {
   totalPrice() {
-    return _.reduce((a, b) => a + b,
-      L.map(p => p.get('price'), this));
+    return addAll(L.map(p => p.get('price'), this));
   }
 }
 
