14. 시간을 이터러블로 다루기 - 아임포트 스케쥴러 결제된 내역 가져오기 (2)
불필요한 API call 제거

--- a/14-time-as-iterable/03-iamport-scheduler.html
+++ b/14-time-as-iterable/03-iamport-scheduler.html
@@ -50,7 +50,7 @@ async function job() {
   const payments = _.go(
     L.range(1, Infinity),
     L.map(Impt.getPayments),
-    L.takeWhile(({ length }) => length),
+    L.takeUntil(({ length }) => length < 3),
     _.each(console.log));
 }
 job();
