14. 시간을 이터러블로 다루기 - 아임포트 스케쥴러 비교 후 결제 취소 API 실행하기

--- a/14-time-as-iterable/03-iamport-scheduler.html
+++ b/14-time-as-iterable/03-iamport-scheduler.html
@@ -65,7 +65,14 @@ async function job() {
     DB.getOrders,
     _.map(({id}) => id));
 
-  console.log(order_ids);
+  // 결제 모듈의 payemtns와 가맹점의 주문서를 비교하여
+  // 결제를 취소해야 할 id를 뽑아 결제 취소 api를 실행
+  await _.go(
+    payments,
+    L.reject(p => order_ids.includes(p.order_id)),
+    L.map(p => p.imp_id),
+    L.map(Impt.cancelPayment),
+    _.each(console.log));
 }
 job();
 
