14. 시간을 이터러블로 다루기 - 아임포트 스케쥴러 반복 실행하기 (1)
반복 실행되도록 구현

--- a/14-time-as-iterable/03-iamport-scheduler.html
+++ b/14-time-as-iterable/03-iamport-scheduler.html
@@ -74,8 +74,10 @@ async function job() {
     L.map(Impt.cancelPayment),
     _.each(console.log));
 }
-job();
 
+(function recur() {
+  job().then(recur);
+}) ();
 </script> 
 </body>
 </html>
