14. 시간을 이터러블로 다루기 - 아임포트 스케쥴러 반복 실행하기 (2)
8초에 한 번 실행되는 스케쥴러 구현

--- a/14-time-as-iterable/03-iamport-scheduler.html
+++ b/14-time-as-iterable/03-iamport-scheduler.html
@@ -33,7 +33,7 @@ const Impt = {
   },
   getPayments: page => {
     console.log(`http://..?page=${page}`);
-    return _.delay(100, Impt.payments[page]);
+    return _.delay(1000 * 1, Impt.payments[page]);
   },
   cancelPayment: imp_id => Promise.resolve(`${imp_id}: 취소완료`)
 };
@@ -75,8 +75,13 @@ async function job() {
     _.each(console.log));
 }
 
+// 8초에 한 번만 한다.
+// 만일 job이 8초보다 더 걸리면 job이 끝날 때까지
 (function recur() {
-  job().then(recur);
+  Promise.all([
+    _.delay(8000, undefined),
+    job()
+  ]).then(recur);
 }) ();
 </script> 
 </body>
