15. 프론트엔드에서 함수형/이터러블/동시성 프로그래밍 - 아이템 지우기 (1)
querySelector, querySelectorAll 간단하게 사용할 수 있도록 변경

--- a/15-functional-programming-in-frontend/index.html
+++ b/15-functional-programming-in-frontend/index.html
@@ -12,7 +12,8 @@
 <script>
 const $ = {};
 
-$.qs = document.querySelector.bind(document);
+$.qs = (sel, parent = document) => parent.querySelector(sel);
+$.qsa = (sel, parent = document) => parent.querySelectorAll(sel);
 
 $.el = html => {
   const wrap = document.createElement('div');
