15. 프론트엔드에서 함수형/이터러블/동시성 프로그래밍 - 아이템 지우기 (2)
사진 삭제 버튼 추가

--- a/15-functional-programming-in-frontend/index.html
+++ b/15-functional-programming-in-frontend/index.html
@@ -15,13 +15,16 @@ const $ = {};
 $.qs = (sel, parent = document) => parent.querySelector(sel);
 $.qsa = (sel, parent = document) => parent.querySelectorAll(sel);
 
+$.find = _.curry($.qs);
+$.findAll = _.curry($.qsa);
+
+$.append = _.curry((parent, child) => parent.appendChild(child));
+
 $.el = html => {
   const wrap = document.createElement('div');
   wrap.innerHTML = html;
   return wrap.children[0];
 };
-
-$.append = _.curry((parent, child) => parent.appendChild(child));
 </script>
 
 <script>
@@ -43,6 +46,7 @@ Images.tmpl = imgs => `
       <div class="image">
         <div class="box"><img src="${img.url}"></div>
         <div class="name">${img.name}</div>
+        <div class="remove">x</div>
       </div>
     `, imgs)}
   </div>
@@ -53,7 +57,13 @@ _.go(
   Images.tmpl,
   $.el,
   $.append($.qs('body')),
-  console.log)
+  $.findAll('.remove'),
+  _.each(el => el.addEventListener('click', e => _.go(
+    e.currentTarget,
+    el => el.closest('.image'),
+    el => el.parentNode.removeChild(el),
+    console.log
+  ))));
 </script>
 </body>
 </html>
