--- a/15-functional-programming-in-frontend/index.html
+++ b/15-functional-programming-in-frontend/index.html
@@ -18,6 +18,8 @@ $.qsa = (sel, parent = document) => parent.querySelectorAll(sel);
 $.find = _.curry($.qs);
 $.findAll = _.curry($.qsa);
 
+$.closest = (sel, el) => el.closest(sel);
+
 $.append = _.curry((parent, child) => parent.appendChild(child));
 
 $.el = html => {
@@ -60,7 +62,7 @@ _.go(
   $.findAll('.remove'),
   _.each(el => el.addEventListener('click', e => _.go(
     e.currentTarget,
-    el => el.closest('.image'),
+    el => $.closest('.image', el),
     el => el.parentNode.removeChild(el),
     console.log
   ))));
