15. 프론트엔드에서 함수형/이터러블/동시성 프로그래밍 - 아이템 지우기 (4)
$.closest에 커링 적용

--- a/15-functional-programming-in-frontend/index.html
+++ b/15-functional-programming-in-frontend/index.html
@@ -18,7 +18,7 @@ $.qsa = (sel, parent = document) => parent.querySelectorAll(sel);
 $.find = _.curry($.qs);
 $.findAll = _.curry($.qsa);
 
-$.closest = (sel, el) => el.closest(sel);
+$.closest = _.curry((sel, el) => el.closest(sel));
 
 $.append = _.curry((parent, child) => parent.appendChild(child));
 
@@ -62,7 +62,7 @@ _.go(
   $.findAll('.remove'),
   _.each(el => el.addEventListener('click', e => _.go(
     e.currentTarget,
-    el => $.closest('.image', el),
+    $.closest('.image'),
     el => el.parentNode.removeChild(el),
     console.log
   ))));
