--- a/15-functional-programming-in-frontend/index.html
+++ b/15-functional-programming-in-frontend/index.html
@@ -65,14 +65,12 @@ _.go(
   $.el,
   $.append($.qs('body')),
   $.findAll('.remove'),
-  $.on('click', async ({ currentTarget: ct }) => { // 객체를 깨서 레퍼런스를 유지하도록 만든다!
-    if (await Ui.confirm('정말 삭제하시겠습니까?')) {
+  $.on('click', async ({ currentTarget: ct }) => // 객체를 깨서 레퍼런스를 유지하도록 만든다!
+    await Ui.confirm('정말 삭제하시겠습니까?') &&
       _.go(
         ct,
         $.closest('.image'),
-        $.remove);
-    }
-  }));
+        $.remove)));
 
 const Ui = {};
 
