--- a/15-functional-programming-in-frontend/index.html
+++ b/15-functional-programming-in-frontend/index.html
@@ -74,34 +74,44 @@ _.go(
 
 const Ui = {};
 
-Ui.confirm = msg => new Promise(resolve => _.go(
+Ui.message = ({msg, btns}) => new Promise(resolve => _.go(
   `
   <div class="confirm">
     <div class="body">
       <div class="msg">${msg}</div>
       <div class="buttons">
-        <button type="button" class="cancel">취소</button>
-        <button type="button" class="ok">확인</button>
+        ${_.strMap(btn => `
+          <button type="button" class="${btn.type}">${btn.name}</button>
+        `, btns)}
       </div>
     </div>
   </div>
   `,
   $.el,
   $.append($.qs('body')),
-  _.tap(
-    $.find('.ok'),
+  ..._.map(btn => _.tap(
+    $.find(`.${btn.type}`),
     $.on('click', e => _.go(
       e.currentTarget,
       $.closest('.confirm'),
       $.remove,
-      _ => resolve(true)))),
-  _.tap(
-    $.find('.cancel'),
-    $.on('click', e => _.go(
-      e.currentTarget,
-      $.closest('.confirm'),
-      $.remove,
-      _ => resolve(false))))));
+      _ => resolve(btn.value)))), btns)
+));
+
+Ui.confirm = msg => Ui.message({
+  msg,
+  btns: [
+    { name: '취소', type: 'cancel', value: false },
+    { name: '확인', type: 'ok', value: true }
+  ]
+});
+
+Ui.alert = msg => Ui.message({
+  msg,
+  btns: [
+    { name: '확인', type: 'ok', value: true }
+  ]
+});
 </script>
 </body>
 </html>
