15. 프론트엔드에서 함수형/이터러블/동시성 프로그래밍 - 함수로 하는 추상화 (2)
Ui.message 매개변수를 분리

--- a/15-functional-programming-in-frontend/index.html
+++ b/15-functional-programming-in-frontend/index.html
@@ -74,7 +74,7 @@ _.go(
 
 const Ui = {};
 
-Ui.message = ({msg, btns}) => new Promise(resolve => _.go(
+Ui.message = (btns, msg) => new Promise(resolve => _.go(
   `
   <div class="confirm">
     <div class="body">
@@ -98,20 +98,14 @@ Ui.message = ({msg, btns}) => new Promise(resolve => _.go(
       _ => resolve(btn.value)))), btns)
 ));
 
-Ui.confirm = msg => Ui.message({
-  msg,
-  btns: [
-    { name: '취소', type: 'cancel', value: false },
-    { name: '확인', type: 'ok', value: true }
-  ]
-});
+Ui.confirm = msg => Ui.message(
+  [{ name: '취소', type: 'cancel', value: false },
+   { name: '확인', type: 'ok', value: true }],
+  msg);
 
-Ui.alert = msg => Ui.message({
-  msg,
-  btns: [
-    { name: '확인', type: 'ok', value: true }
-  ]
-});
+Ui.alert = msg => Ui.message(
+  [{ name: '확인', type: 'ok', value: true }],
+  msg);
 </script>
 </body>
 </html>
