--- a/15-functional-programming-in-frontend/index.html
+++ b/15-functional-programming-in-frontend/index.html
@@ -74,7 +74,7 @@ _.go(
 
 const Ui = {};
 
-Ui.message = (btns, msg) => new Promise(resolve => _.go(
+Ui.message = _.curry((btns, msg) => new Promise(resolve => _.go(
   `
   <div class="confirm">
     <div class="body">
@@ -95,17 +95,18 @@ Ui.message = (btns, msg) => new Promise(resolve => _.go(
       e.currentTarget,
       $.closest('.confirm'),
       $.remove,
-      _ => resolve(btn.value)))), btns)
-));
+      _ => resolve(btn.value)
+    ))), btns)
+)));
 
-Ui.confirm = msg => Ui.message(
-  [{ name: '취소', type: 'cancel', value: false },
-   { name: '확인', type: 'ok', value: true }],
-  msg);
+Ui.confirm = Ui.message([
+  { name: '취소', type: 'cancel', value: false },
+  { name: '확인', type: 'ok', value: true }
+]);
 
-Ui.alert = msg => Ui.message(
-  [{ name: '확인', type: 'ok', value: true }],
-  msg);
+Ui.alert = Ui.message([
+  { name: '확인', type: 'ok', value: true }
+]);
 </script>
 </body>
 </html>
