--- a/15-functional-programming-in-frontend/index.html
+++ b/15-functional-programming-in-frontend/index.html
@@ -32,6 +32,8 @@ $.el = html => {
   wrap.innerHTML = html;
   return wrap.children[0];
 };
+
+$.addClass = _.curry((name, el) => el.classList.add(name));
 </script>
 
 <script>
@@ -51,7 +53,7 @@ Images.tmpl = imgs => `
   <div class="images">
     ${_.strMap(img => `
       <div class="image">
-        <div class="box"><img src="${img.url}"></div>
+        <div class="box"><img lazy-src="${img.url}" class="fade"></div>
         <div class="name">${img.name}</div>
         <div class="remove">x</div>
       </div>
@@ -64,6 +66,14 @@ _.go(
   Images.tmpl,
   $.el,
   $.append($.qs('body')),
+  _.tap(
+    $.findAll('img'),
+    L.map(img => new Promise(resolve => {
+      img.onload = () => resolve(img);
+      img.src = img.getAttribute('lazy-src');
+    })),
+    _.each($.addClass('fade-in'))
+  ),
   $.findAll('.remove'),
   $.on('click', async ({ currentTarget: ct }) => // 객체를 깨서 레퍼런스를 유지하도록 만든다!
     await Ui.confirm('정말 삭제하시겠습니까?') &&
