15. 프론트엔드에서 함수형/이터러블/동시성 프로그래밍 - 이미지 동시성 다루기 (2)
동시적으로 불러오도록 C.takeAll 사용

--- a/15-functional-programming-in-frontend/index.html
+++ b/15-functional-programming-in-frontend/index.html
@@ -72,6 +72,7 @@ _.go(
       img.onload = () => resolve(img);
       img.src = img.getAttribute('lazy-src');
     })),
+    C.takeAll,
     _.each($.addClass('fade-in'))
   ),
   $.findAll('.remove'),
