15. 프론트엔드에서 함수형/이터러블/동시성 프로그래밍 - 동시성 부하 조절 (1)
12개씩 나눠서 이미지를 가져오도록 변경

--- a/15-functional-programming-in-frontend/index.html
+++ b/15-functional-programming-in-frontend/index.html
@@ -68,11 +68,21 @@ _.go(
   $.append($.qs('body')),
   _.tap(
     $.findAll('img'),
-    L.map(img => new Promise(resolve => {
+    L.map(img => _ => new Promise(resolve => {
       img.onload = () => resolve(img);
       img.src = img.getAttribute('lazy-src');
     })),
-    C.takeAll,
+    lazy => {
+      let r = L.range(Infinity); // 언제까지 발생할지 모름
+      return _.go(
+        lazy,
+        _.groupBy(_ => Math.floor(r.next().value / 12)),
+        L.values,
+        L.map(L.map(f => f())),
+        L.map(C.takeAll),
+        _.each(_.each($.addClass('fade-in')))
+      );
+    },
     _.each($.addClass('fade-in'))
   ),
   $.findAll('.remove'),
