--- a/15-functional-programming-in-frontend/index.html
+++ b/15-functional-programming-in-frontend/index.html
@@ -61,30 +61,32 @@ Images.tmpl = imgs => `
   </div>
 `;
 
+Images.loader = limit => _.tap(
+  $.findAll('img'),
+  L.map(img => _ => new Promise(resolve => {
+    img.onload = () => resolve(img);
+    img.src = img.getAttribute('lazy-src');
+  })),
+  lazy => {
+    let r = L.range(Infinity); // 언제까지 발생할지 모름
+    return _.go(
+      lazy,
+      _.groupBy(_ => Math.floor(r.next().value / limit)),
+      L.values,
+      L.map(L.map(f => f())),
+      L.map(C.takeAll),
+      _.each(_.each($.addClass('fade-in')))
+    );
+  },
+  _.each($.addClass('fade-in'))
+);
+
 _.go(
   Images.fetch(),
   Images.tmpl,
   $.el,
   $.append($.qs('body')),
-  _.tap(
-    $.findAll('img'),
-    L.map(img => _ => new Promise(resolve => {
-      img.onload = () => resolve(img);
-      img.src = img.getAttribute('lazy-src');
-    })),
-    lazy => {
-      let r = L.range(Infinity); // 언제까지 발생할지 모름
-      return _.go(
-        lazy,
-        _.groupBy(_ => Math.floor(r.next().value / 12)),
-        L.values,
-        L.map(L.map(f => f())),
-        L.map(C.takeAll),
-        _.each(_.each($.addClass('fade-in')))
-      );
-    },
-    _.each($.addClass('fade-in'))
-  ),
+  Images.loader(12),
   $.findAll('.remove'),
   $.on('click', async ({ currentTarget: ct }) => // 객체를 깨서 레퍼런스를 유지하도록 만든다!
     await Ui.confirm('정말 삭제하시겠습니까?') &&
