--- a/15-functional-programming-in-frontend/index.html
+++ b/15-functional-programming-in-frontend/index.html
@@ -67,19 +67,20 @@ Images.loader = limit => _.tap(
     img.onload = () => resolve(img);
     img.src = img.getAttribute('lazy-src');
   })),
-  lazy => {
-    let r = L.range(Infinity); // 언제까지 발생할지 모름
-    return _.go(
-      lazy,
-      _.groupBy(_ => Math.floor(r.next().value / limit)),
-      L.values,
-      L.map(L.map(f => f())),
-      L.map(C.takeAll),
-      _.each(_.each($.addClass('fade-in')))
-    );
-  },
-  _.each($.addClass('fade-in'))
+  C.takeAllWithLimit(limit),
+  _.each(_.each($.addClass('fade-in')))
 );
+
+C.takeAllWithLimit = _.curry((limit, iter) => {
+  let r = L.range(Infinity); // 언제까지 발생할지 모름
+  return _.go(
+    iter,
+    _.groupBy(_ => Math.floor(r.next().value / limit)),
+    L.values,
+    L.map(L.map(f => f())),
+    L.map(C.takeAll)
+  );
+});
 
 _.go(
   Images.fetch(),
