--- a/15-functional-programming-in-frontend/index.html
+++ b/15-functional-programming-in-frontend/index.html
@@ -71,16 +71,18 @@ Images.loader = limit => _.tap(
   _.each(_.each($.addClass('fade-in')))
 );
 
-C.takeAllWithLimit = _.curry((limit, iter) => {
-  let r = L.range(Infinity); // 언제까지 발생할지 모름
-  return _.go(
-    iter,
-    _.groupBy(_ => Math.floor(r.next().value / limit)),
-    L.values,
-    L.map(L.map(f => f())),
-    L.map(C.takeAll)
-  );
+_.groupBySize = _.curry((size, iter) => {
+  let r = L.range(Infinity);
+  return _.groupBy(_ => Math.floor(r.next().value / size), iter);
 });
+
+C.takeAllWithLimit = _.curry((limit = Infinity, iter) => _.go(
+  iter,
+  _.groupBySize(limit),
+  L.values,
+  L.map(L.map(f => f())),
+  L.map(C.takeAll)
+));
 
 _.go(
   Images.fetch(),
